# Img2STL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  requirements.txt  setup.py
Img2STL/: __init__.py  __main__.py
Img2STL/static/: __init__.py  text.py
Img2STL/stl/: __init__.py  geometry.py  stl_file.py
Img2STL/ui/: __init__.py  about_dialog.py  main_frame.py  ui.fbp  ui.py  ui.xrc
Img2STL/utils/: __init__.py  cmd.py  executor.py  logging.py  utils.py  worker.py
include/: Executor.h  FreeImagePlus.h  Geometry.h  Img2STLAboutDialog.h  Img2STLMainFrame.h  ImgExtFunc.h  Logging.h  MessageQueue.h  STLFile.h  ThreadCommands.h  Worker.h  WorkerMessage.h  static_text.h  ui.h
linux/: setup.sh  start.sh
res/: app_icon.xpm  res_msw.rc
src/: Executor.cpp  Img2STLAboutDialog.cpp  Img2STLMainFrame.cpp  ImgExtFunc.cpp  Logging.cpp  STLFile.cpp  Worker.cpp  main.cpp
src/ui/: ui.cpp  ui.fbp  ui.xrc
windows/: setup.bat  start.bat
